# sw-python-toolkit

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/jupyter/: 001-jupyter-basics.ipynb
src/sw_dtoolkit/: toolkit.py
src/sw_dtoolkit/adapters/: test_adapter_1.py  test_adapter_2.py
src/sw_dtoolkit/calculators/: design_prompter.py  test_calculator_1.py  test_calculator_2.py
src/sw_dtoolkit/calculators/data/: album-names.txt  album-words.txt  band-names.txt  business-industry-list.txt  business-names.txt  city-names.txt  country-codes.txt  country-names.txt  genre-list.txt  person-names.txt  street-names.txt
src/sw_dtoolkit/calculators/utils/: generate-business-prompt.py  generate-music-prompt.py  random_entity_generator.py
src/toolkit/: toolkit.py
src/toolkit/adapters/: test_adapter_1.py  test_adapter_2.py
src/toolkit/calculators/: test_calculator_1.py  test_calculator_2.py
tests/: test_randoms.py  test_simple.py  test_toolkit.py
