[metadata]
name = sw-toolkit-python-rjsalvadorr
version = 0.0.1
author = R. J. Salvador
author_email = salvador.workshop@gmail.com
description = "Salvador Workshop's Python Toolkit"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salvador-workshop/sw-toolkit-python
project_urls =
    Bug Tracker = https://github.com/salvador-workshop/sw-toolkit-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
